@@ -2,6 +2,8 @@ Revision history for MooseX-Types
 
 {{$NEXT}}
 
+        - Special case new to avoid unexpected exceptions on unloaded classes
+
 0.33    2012-05-18
 
         - Switch delegation order to prioritise type over class except for new
